[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/ambulance_iso.png" type="Texture" id=1]
[ext_resource path="res://src/CityMap/Ambulance.gd" type="Script" id=2]
[ext_resource path="res://src/Modules/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://src/CityMap/AmbulanceStates/InGarage.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Modules/StateMachine/StateNameDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/CityMap/AmbulanceStates/Patrol.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/CityMap/AmbulanceStates/BackToGarage.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/CityMap/FuelDisplay.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/images/light_mask_iso_big.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/kenney_mini_small.tres" type="DynamicFont" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.4, 0.501961, 1, 0.588235, 1, 1, 1, 0.588235 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Area2D/Sprite/LightLeft:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Sprite/LightRight:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Area2D/Sprite/LightLeft:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Area2D/Sprite/LightRight:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[node name="Ambulance" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Area2D"]
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="LightLeft" type="Light2D" parent="Area2D/Sprite"]
position = Vector2( 2.41316, -5.38375 )
texture = ExtResource( 9 )
color = Color( 1, 0, 0, 1 )
energy = 2.0

[node name="LightRight" type="Light2D" parent="Area2D/Sprite"]
position = Vector2( 3.8147e-06, -4.13908 )
texture = ExtResource( 9 )
color = Color( 0, 0, 1, 1 )
energy = 0.0

[node name="StateNameDisplay" parent="Area2D" instance=ExtResource( 5 )]
visible = false
light_mask = 0
margin_top = -22.0973
margin_bottom = -8.09735

[node name="Name" type="Label" parent="Area2D"]
modulate = Color( 1, 1, 1, 0.392157 )
light_mask = 0
margin_left = -18.5
margin_top = -22.0973
margin_right = 18.5
margin_bottom = -8.09732
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 10 )
text = "STATE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FuelDisplay" parent="Area2D" instance=ExtResource( 8 )]
visible = false
light_mask = 0
margin_left = -20.0
margin_top = 9.0
margin_right = 20.0
margin_bottom = 40.0
text = "100
"
align = 1
valign = 1

[node name="Path" type="Line2D" parent="."]
width = 1.0
default_color = Color( 0.882353, 0.341176, 0.745098, 0.588235 )
gradient = SubResource( 2 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="InGarage" parent="StateMachine" instance=ExtResource( 4 )]

[node name="Patrol" parent="StateMachine" instance=ExtResource( 6 )]

[node name="BackToGarage" parent="StateMachine" instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/_reset = SubResource( 3 )
anims/signals_on = SubResource( 4 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
